refactor: change order for some api endpoints
